fix little shift after draw end

--- a/mcww_web/css/imageEditor.css
+++ b/mcww_web/css/imageEditor.css
@@ -14,8 +14,6 @@
 
 .mcww-image-editor-container #image-canvas {
     z-index: 5;
-    border: 2px solid var(--border-color-primary);
-    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
 }
 .mcww-image-editor-container {
     cursor: crosshair;
@@ -31,6 +29,11 @@ div.html-container:has(div.mcww-image-editor-container) {
 .mcww-image-editor-container #image-editor-bg img {
     max-width: 100%;
     max-height: 100%;
+}
+
+.mcww-image-editor-container>* {
+    border: 2px solid var(--border-color-primary);
+    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
 }
 
 .mcww-canvas-wrapper {
